crud upaload file

--- a/src/app/components/home-list/home-list.component.scss
+++ b/src/app/components/home-list/home-list.component.scss
@@ -7,7 +7,12 @@ FLOAT: left;
 padding: 1%;
 overflow:scroll;
 }
-
+h1
+{
+    font-size: 80px; 
+    text-align: center;
+    /* Titres de 40 pixels */
+}
 label
 {
     font-weight: bold;
@@ -16,7 +21,15 @@ label
 
 }
 
+div.scroll
+{
 
+height:500PX;
+FLOAT: left;
+
+padding: 1%;
+overflow:scroll;
+}
 h1
 {
     font-size: 40px; 
@@ -29,4 +42,10 @@ th
     text-align: center;
     /* Titres de 40 pixels */
 }
+label
+{
+    font-weight: bold;
 
+   color :"#0000FF";
+
+}
