--- a/src/app/components/home-list/home-list.component.html
+++ b/src/app/components/home-list/home-list.component.html
@@ -1,14 +1,4 @@
-<mat-toolbar color="primary">
-    <div fxHide.gt-xs>
-        <button mat-icon-button>
-            <mat-icon>menu</mat-icon>
-        </button>
-    </div>
-    <div>
-        Liste Article
-    </div>
-</mat-toolbar>
-<div class="pricing-header mx-auto">
+<!-- <div class="pricing-header mx-auto">
     <div class="table-responsive">
         <table class="table table-bordered table-responsive-sm table-responsive-md
    table-responsive-lg">
@@ -24,23 +14,50 @@
                 </tr>
             </thead>
             <tbody>
-
-
                 <tr *ngFor="let item of homeService.listData ">
                     <th class="hidden">{{item.id}}</th>
                     <td>{{item.address}}</td>
                     <td>{{item.createDate}}</td>
 
-                    <td><a href="#"><img class="card-img-top img-responsive"
-                                src="{{this.homeService.host+'/api/auth/ImgHomes/'+item.id}}"
-                                style="height:200px;width:200px" alt=""></a></td>
+                    <td>
+                        <img class="marginauto" src="{{this.homeService.host+'/api/auth/ImgHomes/'+item.id}}" style="width:150px" alt="">
+                    </td>
                     <td><button class="btn btn-warning btn btn-outline-dark ml-1" (click)="selectData(item)">
                             <i class="fa fa-pencil-square-o"></i></button></td>
                     <td><button class="btn btn-danger btn btn-outline-dark ml-1" (click)="removeData(item.id)">
                             <i class="fa fa-trash-o"></i></button></td>
-
                 </tr>
             </tbody>
+        </table>
+    </div>
+</div> -->
+<div class="container">
+    <div class="row">
+        <table id="customers" style="border-collapse: collapse;">
+            <tr>
+                <th>Address</th>
+                <th>Create</th>
+                <th>Image</th>
+                <th>
+                    <button class="btn btn-primary" routerLink="/home">Create New</button>
+                </th>
+            </tr>
+            <tr *ngFor="let item of homeService.listData ">
+                <th class="hidden">{{item.id}}</th>
+                <td>{{item.address}}</td>
+                <td>{{item.createDate}}</td>
+                <td>
+                    <img class="marginauto" src="{{this.homeService.host+'/api/auth/ImgHomes/'+item.id}}" style="width:150px" alt="">
+                </td>
+                <td>
+                    <mat-icon style="cursor: pointer;" title="Nhấn vào để xóa" (click)="selectData(item)">clear
+                    </mat-icon>
+                    &nbsp;
+                    <mat-icon style="cursor: pointer; " title="Nhấn vào để chỉnh sửa" (click)="removeData(item.id)">
+                        edit
+                    </mat-icon>
+                </td>
+            </tr>
         </table>
     </div>
 </div>
