--- a/src/app/components/board-user/board-user.component.html
+++ b/src/app/components/board-user/board-user.component.html
@@ -1,5 +1,7 @@
+<app-header></app-header>
 <div class="container">
     <header class="jumbotron">
         <p>{{ content }}</p>
     </header>
 </div>
+<app-footer></app-footer>
