--- a/src/app/templates/header/header.component.html
+++ b/src/app/templates/header/header.component.html
@@ -1,17 +1,17 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a href="#" class="navbar-brand">HDD</a>
     <ul class="navbar-nav mr-auto" routerLinkActive="active">
         <li class="nav-item">
             <a href="/home" class="nav-link" routerLink="home">Home </a>
         </li>
         <li class="nav-item" *ngIf="showAdminBoard">
-            <a href="/admin" class="nav-link" routerLink="admin">Admin Board</a>
+            <a class="nav-link" routerLink="/admin">Admin Board</a>
         </li>
         <li class="nav-item" *ngIf="showModeratorBoard">
-            <a href="/mod" class="nav-link" routerLink="mod">Moderator Board</a>
+            <a class="nav-link" routerLink="/mod">Moderator Board</a>
         </li>
         <li class="nav-item">
-            <a href="/user" class="nav-link" *ngIf="isLoggedIn" routerLink="user">User</a>
+            <a class="nav-link" *ngIf="isLoggedIn" routerLink="/user">User</a>
         </li>
         <li class="nav-item" *ngIf="showAdminBoard">
             <a class="nav-link" *ngIf="isLoggedIn" routerLink="/books">Book</a>
@@ -34,10 +34,75 @@
 
     <ul class="navbar-nav ml-auto" *ngIf="isLoggedIn">
         <li class="nav-item">
-            <a href="/profile" class="nav-link" routerLink="profile">{{ username }}</a>
+            <a class="nav-link" routerLink="/profile">{{ username }}</a>
         </li>
         <li class="nav-item">
             <a href class="nav-link" (click)="logout()">Logout</a>
         </li>
     </ul>
+</nav> -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">HDD</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                Dropdown
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+        </li>
+
+        <li class="nav-item">
+            <a class="nav-link disabled" href="#">Disabled</a>
+        </li>
+    </ul>
+
+    <ul class="navbar-nav ml-auto" *ngIf="isLoggedIn">
+        <li class="nav-item dropdown">
+            <a class="navbar-brand dropdown-toggle " href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                Tài khoản <br />{{ username }}
+            </a>
+            <div class="dropdown-menu dropdown-content pull-right" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Đơn hàng của tôi</a>
+                <a class="dropdown-item" href="#">Thông báo của tôi</a>
+                <a class="dropdown-item" href="user/profile">Tài khoản của tôi</a>
+                <a class="dropdown-item" href="#">Nhận xét sản phẩm đã mua</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" style="cursor: pointer;" (click)="logout()">Đăng xuất</a>
+            </div>
+        </li>
+        <li class="nav-item" style="cursor: pointer;" routerLink="/user/cart">
+            <a matBadge="7" matBadgeColor="warn">
+                <i class="fa fa-shopping-cart" style="font-size:36px"></i>
+                <span class="sr-only">(current)</span>
+            </a>
+            &nbsp;&nbsp;<span>Giỏ hàng</span>
+        </li>
+    </ul>
+    <ul class="navbar-nav ml-auto" *ngIf="!isLoggedIn">
+        <li class="nav-item">
+            <a href="register" class="nav-link">Đăng ký</a>
+        </li>
+        <li class="nav-item">
+            <a href="login" class="nav-link">Đăng nhập</a>
+        </li>
+    </ul>
+
 </nav>
