--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="container" *ngIf="currentUser; else loggedOut">
     <header class="jumbotron">
         <h3>
@@ -21,3 +22,4 @@
 <ng-template #loggedOut>
     Please login.
 </ng-template>
+<app-footer></app-footer>
