--- a/src/app/components/book-details/book-details.component.html
+++ b/src/app/components/book-details/book-details.component.html
@@ -186,16 +186,16 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title text-danger" id="exampleModalCenterTitle">Xóa bình luận</h5>
+                    <h5 class="modal-title text-danger" id="exampleModalCenterTitle">Xóa đánh giá</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body text-dark text-center">
-                    <h5>Are you sure?</h5>
+                    <h5>Bạn muốn xóa đánh giá</h5>
                 </div>
                 <div class="modal-footer">
-                    <button #closeModalRef2 type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button #closeModalRef2 type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
                     <button type="button" class="btn btn-danger" (click)="deleteComment(closeModalRef2)">Xóa</button>
                 </div>
             </div>
