--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -17,8 +17,10 @@
             <input type="date" class="form-control" formControlName="createDate" id="createDate">
         </div>
         <div class="form-group">
-            <label>File Upload </label>
+            <label>File Upload</label>
             <input type="file" accept="image/*" (change)="onSelectFile($event)" multiple>
+        </div>
+        <div class="form-group">
             <img [src]="imgURL" height="200" *ngIf="imgURL">
         </div>
         <div class="form-group">
