--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -6,7 +6,8 @@
         </h3>
     </header>
     <p>
-        <strong>Token:</strong> {{ currentUser.accessToken.substring(0, 20) }} ... {{ currentUser.accessToken.substr(currentUser.accessToken.length - 20) }}
+        <strong>Token:</strong> {{ currentUser.accessToken.substring(0, 20) }} ... {{
+        currentUser.accessToken.substr(currentUser.accessToken.length - 20) }}
     </p>
     <p>
         <strong>Email:</strong> {{ currentUser.email }}
